--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,7 +3,7 @@ Author: Ng Jian Zhen
 Created: 6-December-2018
 Last Modified: 11-December-2018*/
 
-/*main header text*/
+/*------------------------------------mainheader------------------------------*/
 #mainTitle{
   display: block;
   text-align: center;
@@ -24,29 +24,6 @@ Last Modified: 11-December-2018*/
   padding: 30px 0px 0px;
 }
 
-#split-mainTitle{
-  visibility: hidden;
-  position:static;
-
-  text-align: left;
-  font-family: "Montserrat", cursive, sans-serif;
-  font-size: 2em;
-  color: rgb(64,224,208);
-  font-weight: bold;
-  margin-left: 10px;
-}
-
-#split-mainTitle span{
-  float: right;
-  position:static;
-  text-align: right;
-  font-family: "Raleway", cursive, sans-serif;
-  color: rgb(64,224,208);
-  font-size: 1rem;
-  margin-top: 10px;
-  margin-right: 5px;
-}
-
 /*banner*/
 #mainheader{
   height: 220px;
@@ -57,14 +34,14 @@ Last Modified: 11-December-2018*/
   background-repeat: no-repeat;
 }
 
-/*-----Top navigation bar style-----*/
+/*----------------------------Top Navigation Bat------------------------------*/
 /* Configure top navigation pane properties */
 nav{
-  margin-top: 55px;
+  margin-top: 0;
 }
 
 .fa-align-justify{
-  font-size:1.87rem;
+  font-size:1.7rem;
 }
 
 #topnav {
@@ -148,14 +125,14 @@ nav{
 }
 
 
-/*-----Side navigation bar style-----*/
+/*----------------------------------Side navigation bar ----------------------*/
 /* The side navigation menu */
 aside{
   float: left;
 }
 
 #leftsidenav {
-  margin-top:286px;
+  margin-top:285px;
   margin-left: 8px;
   height: 100%; /* 100% Full-height */
   width: 0px; /* 0 width - change this with JavaScript */
@@ -191,25 +168,28 @@ aside{
   #leftsidenav a {font-size: 18px;}
 }
 
-/*-----iFrame style-----*/
-iframe{
-  margin: 0;
-  padding: 0;
-  border: none;
-  width:100%;
-  height:100%;
-  overflow:hidden;
+
+/*----------------------------------main article area------------------------ */
+#mainContent{
+  transition: margin-left .5s;
+  margin-top: 30px;
+  margin-left: 0px;
+  padding: 0px;
 }
 
-
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#mainContent {
+/*----------------------------------main article area------------------------ */
+#mainfooter{
   transition: margin-left .5s;
   margin-top: 80px;
   margin-left: 0px;
   padding: 0px;
 }
 
+#mainfooter h1{
+  text-align: left;
+  font-family: "Montserrat", cursive, sans-serif;
+  font-size: 3rem;
+}
 
 /*-----------------------Code for scrolling----------------------*/
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
@@ -222,11 +202,6 @@ iframe{
 /* The sticky class is added to the dropdown with JS when it reaches its scroll position */
 .stickydropdown{
   top:57px;
-}
-
-/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
-  padding-top: 60px;
 }
 
 .stickyHeader{
